@@ -4702,6 +4702,7 @@ b9b9feeb0e10ea70b9c4b7a04115edc33ce463de assets\create\models\block\cut_ochrum_b
 6430f776846393ab6d70d23faeccb3e353c66129 data\create\loot_tables\blocks\copper_valve_handle.json
 92bf5dee370ad1d5d19f9b3a8eef31324e7c9365 data\create\recipes\small_diorite_brick_slab.json
 0e080daa457bb565a8063c12439f40a2ea02ff21 data\create\loot_tables\blocks\cut_calcite_brick_slab.json
+67d54d52dd971ccf1038461ec0f9052d4df0b92b data\create\tags\fluids\diving_fluids.json
 3207f3e1eb5fe51c304729adade7ea8d3f4a6dcb assets\create\models\block\cut_calcite_slab.json
 0270b68550e19720d0cdc9e44f63618908628192 assets\create\blockstates\diorite_pillar.json
 67583ae5a8c9f71e3856a1787c6650c34070428e data\create\recipes\crafting\kinetics\cyan_seat.json
